Support auto update check mark when change language.
git-svn-id: http://hugogu/svn/main/Workspace/Projects/TechnicalResearch/WPF/ClearMine@104 abc3d51d-b5e4-b64c-aea7-7d3d034b83e7

--- a/ClearMine.Themes/Themes/luna.normalcolor.xaml
+++ b/ClearMine.Themes/Themes/luna.normalcolor.xaml
@@ -616,6 +616,11 @@
                         <MenuItem Header="{DynamicResource CustomThemeMenuHeader}" />
                     </MenuItem>
                     <MenuItem Header="{DynamicResource LanguageMenuHeader}">
+                        <Interaction.Behaviors>
+                            <BehaviorCollection>
+                                <AutoCheckMenuItemsBehavior />
+                            </BehaviorCollection>
+                        </Interaction.Behaviors>
                         <MenuItem Header="{DynamicResource EnglishMenuItemHeader}"
                                   Command="{x:Static h:GameCommands.SwitchLanguage}"
                                   CommandParameter="en-US" />
