[ClearMine] 修正取消选择自定义语言之后，菜单项依然被选中的Bug。
git-svn-id: http://hugogu/svn/main/Workspace/Projects/TechnicalResearch/WPF/ClearMine@134 abc3d51d-b5e4-b64c-aea7-7d3d034b83e7

--- a/ClearMine.Themes/Themes/luna.normalcolor.xaml
+++ b/ClearMine.Themes/Themes/luna.normalcolor.xaml
@@ -623,7 +623,7 @@
                         </Interaction.Behaviors>
                         <MenuItem Header="{DynamicResource EnglishMenuItemHeader}"
                                   Command="{x:Static h:GameCommands.SwitchLanguage}"
-                                  CommandParameter="en-US" />
+                                  CommandParameter="en-US" IsChecked="True" />
                         <MenuItem Header="{DynamicResource ChineseMenuItemHeader}"
                                   Command="{x:Static h:GameCommands.SwitchLanguage}"
                                   CommandParameter="zh-CN" />
@@ -652,6 +652,7 @@
                        HorizontalAlignment="Center"
                        UseLayoutRounding="True">
                 <ElectronicNumber LengthAfterPoint="1"
+                                  MinLength="4"
                                   DisplayNumber="{Binding Time}" />
                 <Button Command="New"
                         Margin="18,0,18,0"
