[ClearMine] 移除图片，使用消息发送发生的异常，使ExceptionBox被封装到Framework内部。
git-svn-id: http://hugogu/svn/main/Workspace/Projects/TechnicalResearch/WPF/ClearMine@138 abc3d51d-b5e4-b64c-aea7-7d3d034b83e7

--- a/ClearMine.Framework/Dialogs/ExceptionBox.xaml
+++ b/ClearMine.Framework/Dialogs/ExceptionBox.xaml
@@ -1,4 +1,4 @@
-﻿<d:OptionDialog x:Class="ClearMine.Framework.Dialogs.ExceptionBox"
+﻿<d:OptionDialog x:Class="ClearMine.Framework.Dialogs.ExceptionBox" x:ClassModifier="internal"
                 xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                 xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                 xmlns:d="clr-namespace:ClearMine.Framework.Dialogs"
