[ClearMine] 1.模块化主程序  2.弹出窗私有化  3.异常消息处理器的名字空间修正。
git-svn-id: http://hugogu/svn/main/Workspace/Projects/TechnicalResearch/WPF/ClearMine@142 abc3d51d-b5e4-b64c-aea7-7d3d034b83e7

--- a/ClearMine.Dialogs/GameWonWindow.xaml
+++ b/ClearMine.Dialogs/GameWonWindow.xaml
@@ -1,5 +1,4 @@
-﻿<OptionDialog x:Class="ClearMine.UI.Dialogs.GameWonWindow"
-              x:ClassModifier="internal"
+﻿<OptionDialog x:Class="ClearMine.UI.Dialogs.GameWonWindow" x:ClassModifier="internal"
               xmlns:h="clr-namespace:ClearMine.Framework.Commands;assembly=ClearMine.Framework"
               xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
               xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
