--- a/ClearMine.Dialogs/OutputWindow.xaml
+++ b/ClearMine.Dialogs/OutputWindow.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="ClearMine.UI.Dialogs.OutputWindow"
+﻿<Window x:Class="ClearMine.UI.Dialogs.OutputWindow" x:ClassModifier="internal"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         TextOptions.TextFormattingMode="Display"
