[ClearMine] 1. 私有化MessageAggregator 2.根据当前语言加载资源和初始化菜单项。
git-svn-id: http://hugogu/svn/main/Workspace/Projects/TechnicalResearch/WPF/ClearMine@148 abc3d51d-b5e4-b64c-aea7-7d3d034b83e7

--- a/ClearMine.Themes/Themes/luna.normalcolor.xaml
+++ b/ClearMine.Themes/Themes/luna.normalcolor.xaml
@@ -619,11 +619,12 @@
                         <Interaction.Behaviors>
                             <BehaviorCollection>
                                 <AutoCheckMenuItemsBehavior />
+                                <SelectCurrentUICultureBehavior />
                             </BehaviorCollection>
                         </Interaction.Behaviors>
                         <MenuItem Header="{DynamicResource EnglishMenuItemHeader}"
                                   Command="{x:Static h:GameCommands.SwitchLanguage}"
-                                  CommandParameter="en-US" IsChecked="True" />
+                                  CommandParameter="en-US" />
                         <MenuItem Header="{DynamicResource ChineseMenuItemHeader}"
                                   Command="{x:Static h:GameCommands.SwitchLanguage}"
                                   CommandParameter="zh-CN" />
